--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /*banner*/
 /*.banner{width:100%;height:520px;overflow:hidden;margin-top:118px;text-align:center;background:url("../images/banner.png") no-repeat center;background-size:cover;}*/
 /*.banner img{width:1920px;height:600px;margin:0 auto;}*/
-body{min-width:1200px;margin:0 auto;}
+body{min-width:1200px;margin:0 auto;position:relative;}
 
 /*banner*/
 .swiper-container{width:100%;height:520px;overflow:hidden;margin-top:118px;text-align:center;}
@@ -50,10 +50,10 @@ cursor:pointer;z-index:20;background:#eee;}
 .haoli .picText li h5{height:24px;line-height:24px;margin:23px 0 3px 0;font-size:18px;font-weight:normal;}
 .haoli .picText li .line{width:75px;height:3px;background:#f2c81c;display:inline-block;}
 .haoli .picText li .liji{/*display:none;*/display:block;width:223px;height:46px;line-height:46px;border:2px solid #a4a4a4;border-top:1px solid #4a4a4a;border-radius:7px;margin:30px auto 29px;
-color:#4c4c4c;position:relative;opacity:0;transition:all 0.4s linear;overflow:hidden;
+color:#4c4c4c;position:relative;opacity:0;transition:all 0.4s linear;overflow:hidden;cursor:pointer;
 }
 .haoli .picText li .liji:before{content:"";width:223px;/*width:0;*/height:46px;border-radius:7px;position:absolute;top:0;/*left:0;*/left:-223px;background:#f5c71a;opacity:0;}
-.haoli .picText li:hover{box-shadow:5px 5px 5px 0  #ececec;}
+.haoli .picText li:hover{box-shadow:0 0 10px 0  #ececec;}
 .haoli .picText li:hover .img img{transform:scale(0.8,0.8);}
 
 .haoli .picText li:hover .liji{/*display:block;*/opacity:1;}
@@ -83,7 +83,7 @@ color:#4c4c4c;position:relative;opacity:0;transition:all 0.4s linear;overflow:hi
 .fangan .picText{}
 .fangan .picText li{width:283px;float:left;margin-right:22px;margin-right:15px\9;text-align:center;}
 .fangan .picText li:last-child{margin-right:0;}
-.fangan .picText li:hover{box-shadow:5px 5px 5px 0  #ececec;}
+.fangan .picText li:hover{box-shadow:0 0 10px 0  #ececec;}
 .fangan .picText li h5{height:28px;line-height:28px;padding-top:12px;font-size:20px;font-weight:normal;}
 .fangan .picText li .line{width:58px;height:2px;background:#cfcfcf;display:inline-block;margin-top:7px;}
 .fangan .picText li p{height:18px;line-height:18px;margin:9px 0 22px 0;color:#f9c21d;font-size:16px;}
@@ -116,24 +116,28 @@ color:#4c4c4c;position:relative;opacity:0;transition:all 0.4s linear;overflow:hi
 .baojia .inner form .right label{width:215px;height:47px;line-height:47px;border:1px solid #0c0c0c;border-radius:5px;float:left;margin:0 58px 20px 0;margin-right:25px\9;}
 .baojia .inner form .right label img{margin:11px 0 0 8px;float:left;}
 .baojia .inner form .right label span{width:1px;height:24px;background:#505050;display:block;margin:13px 0 0 8px;float:left;}
-.baojia .inner form .right label input{float:left;width:120px;padding:5px 10px;height:37px;height:35px;line-height:35px;color:#515151;}
+.baojia .inner form .right label input{float:left;width:120px;padding:5px 10px;height:35px;line-height:35px;color:#515151;}
 .baojia .inner form .right label:nth-child(2){margin-right:0;margin-right:0\9;}
 .baojia .inner form .right label:nth-child(4){margin-right:0;margin-right:0\9;}
 .baojia .inner form .right label:last-child{}
 .baojia .inner form .right label:nth-child(4) input{border-radius:8px 0 0 8px;}
 .baojia .inner form .right label .yanzheng{width:75px;height:47px;background:#ecca13;border-radius:0 8px 8px 0;float:right;display:inline;}
 .baojia .inner form .right .jisuan{width:100%;width:93%\9;height:43px;line-height:43px;border-radius:8px;background:#ecca13;cursor:pointer;}
+
+.baojia .inner form .right .BJ-quyu{position:relative;color:#515151;}
+.baojia .inner form .right .BJ-quyu .input{
+    float:left;width:120px;padding:5px 10px;height:35px;line-height:35px;color:#515151;
+    border-radius:8px 0 0 8px;cursor:pointer;}
+.baojia .inner form .right .BJ-quyu .select-quyu{width:140px;border:1px solid #0c0c0c;position:absolute;top:49px;left:45px;background:#fff;display:none;}
+.baojia .inner form .right .BJ-quyu .select-quyu li{width:120px;padding:0 10px;height:23px;line-height:23px;font-size:14px;margin:0;text-align:left;}
+.baojia .inner form .right .BJ-quyu .select-quyu li:hover{background:#ECCA13;color:#fff;}
+
+
 /*报价 右*/
 .baojia .inner .people{float:left;width:230px;margin:30px 0 0 37px;border:1px solid #f5c71a;text-align:center;overflow:hidden;}
 .baojia .inner .people .thead{width:100%;height:59px;line-height:59px;background:#f5c71a;color:#fff;position:relative;font-size:16px;}
 .baojia .inner .people .thead strong{color:#000;font-size:18px;}
 
-/*.baojia .inner .people .marquee{!*width:100%;*!width:230px;height:120px;margin:0;padding:0;display:block;padding-left:10px;overflow:hidden;}
-.baojia .inner .people table{!*width:100%;*!width:230px;height:120px;position:relative;overflow:hidden;!*position:absolute;left:0;top:0;*!}
-.baojia .inner .people .marquee table tr{color:#535353;height:28px;line-height:28px;font-size:16px;}
-.baojia .inner .people .marquee table tr td:nth-child(1){width:20%;}
-.baojia .inner .people .marquee table tr td:nth-child(2){width:40%;}
-.baojia .inner .people .marquee table tr td:nth-child(3){width:40%;color:#f5c71a;}*/
 .baojia .inner .people .people-cont{width:228px;height:122px;border:1px solid #f5c71a;overflow:hidden;position:relative;}
 .baojia .inner .people .people-cont ul{position:absolute;left:0;width:100%;}
 .baojia .inner .people .people-cont ul li{color:#535353;height:28px;line-height:28px;font-size:16px;}
@@ -253,3 +257,13 @@ font-size:28px;
 .liucheng .cont .li .bg{width:158px;height:120px;border:1px solid #4a4a4a;border-top:2px solid #a5a5a5;margin-top:70px;}
 .liucheng .cont .li .bg h6{height:23px;line-height:23px;color:#131313;font-size:18px;padding-top:73px;font-weight:normal;}
 .liucheng .cont .heng{width:53px;height:7px;background:#e9e9e9;margin:156px 0 0 13px;}
+
+
+/*模态框*/
+.modal-bg{width:100%;height:100%;background:rgba(0,0,0,0.7);position:fixed;left:0;top:0;z-index:50;display:none;/*opacity:0;*/}
+.modal{width:360px;position:fixed;left:50%;top:30%;margin-left:-180px;background:#fff;z-index:50;text-align:center;opacity:0;display:none;box-shadow:0 0 10px 0 #000;}
+.modal img{padding-top:20px;}
+.modal input{width:290px;padding:0 20px;margin:20px auto 0;display:inline-block;border:1px solid #d2d2d2;height:45px;line-height:45px;color:#ababab;border-radius:5px;}
+.modal input#lingqu-number{margin-top:10px;}
+.modal button{width:328px;height:43px;background:#ffb400;color:#434343;border:1px solid #d2d2d2;margin:10px auto 20px;border-radius:5px;}
+.modal .close-btn{position:absolute;right:2px;top:2px;font-size:14px;cursor:pointer;}
