--- a/css/xinfang.css
+++ b/css/xinfang.css
@@ -1,3 +1,5 @@
+
+body{min-width:1200px;margin:0 auto;position:relative;}
 /*banner*/
 .swiper-container{width:100%;height:520px;overflow:hidden;margin-top:118px;text-align:center;}
 .swiper-container .swiper-wrapper{width:100%;height:100%;}
