--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 /*banner*/
 /*.banner{width:100%;height:520px;overflow:hidden;margin-top:118px;text-align:center;background:url("../images/banner.png") no-repeat center;background-size:cover;}*/
 /*.banner img{width:1920px;height:600px;margin:0 auto;}*/
-body{min-width:1200px;margin:0 auto;position:relative;}
+/*body{min-width:1200px;margin:0 auto;position:relative;}*/
 
 /*banner*/
 .swiper-container{width:100%;height:520px;overflow:hidden;margin-top:118px;text-align:center;}
